# Vazza

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  build_debug.sh  requirements.txt
assets/: shader.slang
include/: Application.h  Component.h  Entity.h  Event.h  Globals.h  Material.h  Mesh.h  Resource.h  Texture.h
src/: Application.cpp  Component.cpp  Entity.cpp  Globals.cpp  Texture.cpp  main.cpp
